tests/rosetta/out/Smalltalk/aliquot-sequence-classifications.out
/workspace/mochi/tests/rosetta/out/Smalltalk/aliquot-sequence-classifications.st:113: parse error, expected '|' or identifier
